--- a/analysis/00_01_scRNA_preprocessing.ipynb
+++ b/analysis/00_01_scRNA_preprocessing.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# scRNA-seq preprocessing\n",
+    "\n",
+    "scRNA-seq preprocessing code for eQTL analysis."
+   ]
   },
   {
    "cell_type": "code",
@@ -77,7 +81,7 @@
     "sc.tl.pca(adata, svd_solver='arpack')\n",
     "sc.pl.pca_variance_ratio(adata, log=True, n_pcs=50) \n",
     "# add pca and save it to preprocessed, not integrated anndata h5ad files\n",
-    "# adata.write(f_anndata_path_SCTcount)"
+    "adata.write(f_anndata_path_SCTcount)"
    ]
   },
   {
@@ -86,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = sc.read_h5ad(\"./adata_raw.h5ad\")\n",
+    "adata = sc.read_h5ad(f_anndata_path_SCTcount)\n",
     "### previously done\n",
     "sc.external.pp.harmony_integrate(adata, 'sample_time', max_iter_harmony = 20)\n",
     "### neighborhood graph of cells (determine optimal number of PCs here)\n",
