--- a/analysis/00_02_scRNA_pseudobulk.ipynb
+++ b/analysis/00_02_scRNA_pseudobulk.ipynb
@@ -237,20 +237,13 @@
    "source": [
     "# 2. iter.tools ####\n",
     "\n",
-    "## 2.0 일반적으로 Cluster level로 pipeline을 짜야 함. ####\n",
-    "### genotype :\n",
-    "### phenotype : cell id도 있으면 좋음 \n",
-    "### covariates :\n",
-    "#### genotype PCA, other MD : id만 필요\n",
-    "#### phenotype PCA : phenotype 전체가 필요함\n",
-    "\n",
-    "## as a pipeline : phenotype 에서 나머지 만들기\n",
+    "## as a pipeline : from phenotype.\n",
     "\n",
     "global_prefix = \"01_calling_eQTL/01_00_pseudobulk_pipeline/\"\n",
     "gtf = read_delim(\"gencode.v43.basic.tss_bed.txt\")\n",
     "\n",
     "chr_cluster_definition = \"anno_l1\"\n",
-    "chr_time_definition = \"1st\" # base for baseline, or 1st for treatment\n",
+    "chr_time_definition = \"1st\"\n",
     "chr_sampleid = \"sample_time\"\n",
     "chr_path_sample_information = \"00_sample_information_v8.txt\"\n",
     "# note: this is same as 220426_maf_0.1_hwe_1e-5_genomind_0.03_updateIID\n",
