--- a/analysis/00_02_scRNA_pseudobulk.ipynb
+++ b/analysis/00_02_scRNA_pseudobulk.ipynb
@@ -18,8 +18,7 @@
     "lapply(vlib, require, character.only = TRUE, quietly = TRUE) |> suppressMessages()\n",
     "\n",
     "base.dir=\"/path/to/data\"\n",
-    "chr_wd = paste0(base.dir, \"202404-sceQTLv7/\")\n",
-    "setwd(chr_wd)\n",
+    "setwd(base.dir)\n",
     "\n",
     "saveRDS.gz <- function(object,file,threads=parallel::detectCores()) {\n",
     "  con <- pipe(paste0(\"pigz -p\",threads,\" > \",file),\"wb\")\n",
