--- a/analysis/00_03_scRNA_QCplots.ipynb
+++ b/analysis/00_03_scRNA_QCplots.ipynb
@@ -514,6 +514,64 @@
     "\n",
     "ggsave(\"figure_prep/pDotPlot_markers_annol2.pdf\", width = 13, height = 10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## supplementary figure S5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "seurat_obj_subset = seurat_obj %>% filter(anno_l1 == \"CD8\") %>% mutate(group = paste(time, response))\n",
+    "c_gene = c(\"PRF1\", \"APOBEC3G\", \"GZMB\")\n",
+    "\n",
+    "p1 = DotPlot(seurat_obj_subset, assay = \"RNA\", features = c_gene, cols = c(\"lightgrey\", \"#3939a4\"))\n",
+    "\n",
+    "p1$data$group = factor(p1$data$group, levels = c(\"1st PR\", \"1st PD\", \"base PR\", \"base PD\"))\n",
+    "\n",
+    "ggsave(\"figure_prep/pGene_expression_S5.pdf\", p1, width = 8, height = 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "source": [
+    "## figure 4I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "seurat_obj_subset = seurat_obj %>% filter(anno_l1 == \"CD8\") %>% mutate(group = paste(time, response))\n",
+    "c_gene = c(\"TBX21\", \"EOMES\", \"IL2RB\")\n",
+    "\n",
+    "p2 = DotPlot(seurat_obj_subset, assay = \"RNA\", features = c_gene)\n",
+    "\n",
+    "p2$data$group = factor(p1$data$group, levels = c(\"base PR\", \"base PD\", \"1st PR\", \"1st PD\"))\n",
+    "\n",
+    "ggsave(\"figure_prep/pGene_expression_4I.pdf\", p2, width = 8, height = 5, cols = c(\"lightgrey\", \"#3939a4\"))"
+   ]
   }
  ],
  "metadata": {
